// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IllustratedEmptyState - Snapshots > matches snapshot with ReactNode subtitle 1`] = `
<div
  class="relative flex flex-col items-center justify-center gap-6 p-6"
>
  <img
    alt="Test - Empty state"
    aria-hidden="true"
    class="pointer-events-none object-contain object-center"
    data-fill="true"
    data-testid="empty-state-image"
    src="/images/test-empty-state.png"
  />
  <div
    class="relative z-10 flex shrink-0 items-center justify-center rounded-full bg-brand/16 p-6"
    data-override-defaults="true"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-frown size-12 text-brand"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M16 16s-1.5-2-4-2-4 2-4 2"
      />
      <line
        x1="9"
        x2="9.01"
        y1="9"
        y2="9"
      />
      <line
        x1="15"
        x2="15.01"
        y1="9"
        y2="9"
      />
    </svg>
  </div>
  <div
    class="relative z-10 flex w-full flex-col items-center justify-center"
    data-override-defaults="true"
  >
    <h3
      class="text-2xl font-bold text-foreground pb-6 text-center leading-8"
      data-testid="typography"
    >
      No items found
    </h3>
    <p
      class="text-center text-base leading-6 font-medium text-secondary-foreground"
      data-testid="typography"
    >
      First line
      <br />
      Second line
    </p>
  </div>
</div>
`;

exports[`IllustratedEmptyState - Snapshots > matches snapshot with children 1`] = `
<div
  class="relative flex flex-col items-center justify-center gap-6 p-6"
>
  <img
    alt="Test - Empty state"
    aria-hidden="true"
    class="pointer-events-none object-contain object-center"
    data-fill="true"
    data-testid="empty-state-image"
    src="/images/test-empty-state.png"
  />
  <div
    class="relative z-10 flex shrink-0 items-center justify-center rounded-full bg-brand/16 p-6"
    data-override-defaults="true"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-frown size-12 text-brand"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M16 16s-1.5-2-4-2-4 2-4 2"
      />
      <line
        x1="9"
        x2="9.01"
        y1="9"
        y2="9"
      />
      <line
        x1="15"
        x2="15.01"
        y1="9"
        y2="9"
      />
    </svg>
  </div>
  <div
    class="relative z-10 flex w-full flex-col items-center justify-center"
    data-override-defaults="true"
  >
    <h3
      class="text-2xl font-bold text-foreground pb-6 text-center leading-8"
      data-testid="typography"
    >
      No items found
    </h3>
    <p
      class="text-center text-base leading-6 font-medium text-secondary-foreground"
      data-testid="typography"
    >
      There are no items to display.
    </p>
  </div>
  <div
    class="relative z-10 flex items-center justify-center"
  >
    <div
      data-testid="test-child"
    >
      Child component
    </div>
  </div>
</div>
`;

exports[`IllustratedEmptyState - Snapshots > matches snapshot with default props 1`] = `
<div
  class="relative flex flex-col items-center justify-center gap-6 p-6"
>
  <img
    alt="Test - Empty state"
    aria-hidden="true"
    class="pointer-events-none object-contain object-center"
    data-fill="true"
    data-testid="empty-state-image"
    src="/images/test-empty-state.png"
  />
  <div
    class="relative z-10 flex shrink-0 items-center justify-center rounded-full bg-brand/16 p-6"
    data-override-defaults="true"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-frown size-12 text-brand"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <path
        d="M16 16s-1.5-2-4-2-4 2-4 2"
      />
      <line
        x1="9"
        x2="9.01"
        y1="9"
        y2="9"
      />
      <line
        x1="15"
        x2="15.01"
        y1="9"
        y2="9"
      />
    </svg>
  </div>
  <div
    class="relative z-10 flex w-full flex-col items-center justify-center"
    data-override-defaults="true"
  >
    <h3
      class="text-2xl font-bold text-foreground pb-6 text-center leading-8"
      data-testid="typography"
    >
      No items found
    </h3>
    <p
      class="text-center text-base leading-6 font-medium text-secondary-foreground"
      data-testid="typography"
    >
      There are no items to display at this time.
    </p>
  </div>
</div>
`;

exports[`IllustratedEmptyState - Snapshots > matches snapshot with different icon 1`] = `
<div
  class="relative flex flex-col items-center justify-center gap-6 p-6"
>
  <img
    alt="Tagged - Empty state"
    aria-hidden="true"
    class="pointer-events-none object-contain object-center"
    data-fill="true"
    data-testid="empty-state-image"
    src="/images/tagged-empty-state.webp"
  />
  <div
    class="relative z-10 flex shrink-0 items-center justify-center rounded-full bg-brand/16 p-6"
    data-override-defaults="true"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-tag size-12 text-brand"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
      />
      <circle
        cx="7.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
  </div>
  <div
    class="relative z-10 flex w-full flex-col items-center justify-center"
    data-override-defaults="true"
  >
    <h3
      class="text-2xl font-bold text-foreground pb-6 text-center leading-8"
      data-testid="typography"
    >
      No tags found
    </h3>
    <p
      class="text-center text-base leading-6 font-medium text-secondary-foreground"
      data-testid="typography"
    >
      You haven't been tagged yet.
    </p>
  </div>
</div>
`;
